--- a/src/webparts/reactYammer/ReactYammerWebPart.manifest.json
+++ b/src/webparts/reactYammer/ReactYammerWebPart.manifest.json
@@ -17,7 +17,7 @@
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
     "group": { "default": "Other" },
-    "title": { "default": "React Yammer" },
+    "title": { "default": "Yammer Post Praise" },
     "description": { "default": "React Yammer description" },
     "officeFabricIconFontName": "YammerLogo",
     "properties": {
